--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -44,6 +44,7 @@
             android:layout_width="200dp"
             android:layout_height="48dp"
             android:inputType="text"
+            android:paddingLeft="10dp"
             android:background="@drawable/rectangle5"
             android:layout_marginTop="16dp" />
 
@@ -60,6 +61,7 @@
             android:layout_width="200dp"
             android:layout_height="48dp"
             android:inputType="textPassword"
+            android:paddingLeft="10dp"
             android:background="@drawable/rectangle5"
             android:layout_marginTop="16dp" />
 
