--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -45,6 +45,7 @@
             android:layout_height="48dp"
             android:inputType="text"
             android:background="@drawable/rectangle5"
+            android:paddingLeft="10dp"
             android:autofillHints="username"
             android:layout_marginBottom="32dp" />
 
@@ -62,6 +63,7 @@
             android:layout_height="48dp"
             android:inputType="textPassword"
             android:background="@drawable/rectangle5"
+            android:paddingLeft="10dp"
             android:autofillHints="password"
             android:layout_marginBottom="32dp" />
 
