--- a/app/src/main/res/drawable/bg_chat_received.xml
+++ b/app/src/main/res/drawable/bg_chat_received.xml
@@ -1,8 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <shape xmlns:android="http://schemas.android.com/apk/res/android">
-        <solid android:color="#7E57C2"/> <!-- Purple 색상 -->
-        <corners android:radius="12dp"/>
-        <padding android:left="10dp" android:right="10dp" android:top="6dp" android:bottom="6dp"/>
-    </shape>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <corners android:radius="20dp"/>
+    <solid android:color="#FFFFFF"/>
+</shape>
