--- a/app/src/main/res/layout/activity_chat_list.xml
+++ b/app/src/main/res/layout/activity_chat_list.xml
@@ -8,17 +8,17 @@
     <!-- 상단 타이틀 & X 버튼 -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#E0E0E0"
-        android:padding="16dp">
+        android:layout_height="51dp"
+        android:background="#E5B5FF"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/chatListTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="쪽지 내역"
-            android:textSize="20sp"
-            android:gravity="center" />
+            android:textSize="20sp" />
 
         <ImageButton
             android:id="@+id/closeChatListButton"
@@ -26,10 +26,11 @@
             android:layout_height="48dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="8dp"
-            android:src="@android:drawable/ic_menu_close_clear_cancel"
+            android:layout_marginTop="-10dp"
+            android:layout_marginEnd="-5dp"
             android:background="?android:attr/selectableItemBackground"
-            android:contentDescription="닫기 버튼" />
+            android:contentDescription="닫기 버튼"
+            android:src="@android:drawable/ic_menu_close_clear_cancel" />
     </RelativeLayout>
 
     <!-- 채팅 목록 리스트 -->
