--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -6,5 +6,5 @@
     android:textSize="16sp"
     android:layout_margin="6dp"
 
-    android:background="@drawable/bg_chat_received"
+    android:background="@drawable/bg_chat_sent"
     android:textColor="@android:color/black"/>
