--- a/app/src/main/res/layout/fragment_profile_detail.xml
+++ b/app/src/main/res/layout/fragment_profile_detail.xml
@@ -49,6 +49,15 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="16dp" />
 
+        <!--위치-->
+        <TextView
+            android:id="@+id/userLocationText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="현재 위치: 불러오는 중..."
+            android:textSize="16sp"
+            android:layout_marginTop="10dp" />
+
         <!-- 소개서 -->
         <TextView
             android:layout_width="wrap_content"
